--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "socket.io-client": "^2.1.1",
     "twitter": "^1.7.1"
   },
+  "proxy": "http://localhost:3001",
   "scripts": {
     "start": "react-scripts start",
     "start-server": "node src/server/server.js",
